objects/CaseInformation__c.object
<CustomObject>
    <description>削除対象Object？</description>
    <fields>
        <fullName>AccountCode__c</fullName>
        <formula>Contact__r.Account.Code__c</formula>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>問合せ</relationshipLabel>
        <relationshipName>CaseInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactCode__c</fullName>
        <formula>Contact__r.TantoshaCode__c</formula>
        <label>担当者コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>問合せ</relationshipLabel>
        <relationshipName>CaseInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KaitoDate__c</fullName>
        <label>回答日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>問合せ区分</label>
        <picklist>
            <picklistValues>
                <fullName>WEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>問合せ状況</label>
        <picklist>
            <picklistValues>
                <fullName>無</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>回答済</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未回答</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>確認中</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToiawaseAnswer__c</fullName>
        <label>回答内容</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToiawaseNaiyo__c</fullName>
        <label>問合せ内容</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToiawseDate__c</fullName>
        <label>問合せ日付</label>
        <type>Date</type>
    </fields>
    <label>問合せ</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>問合せNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>